# heaan-svc-thesis

./: .dockerignore  .gitignore  Dockerfile  README.md  eva_client.py  eva_server.py  exp_batch.py  exp_slot.py
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: docker-image.yml
archive/: eva_server.py
archive/cpp-implem/client/cpp/: CMakeLists.txt  main.cpp
archive/cpp-implem/client/python/: client.py
archive/cpp-implem/server/cpp/: build.sh
archive/cpp-implem/server/python/: server.py
archive/eva-test/: eva_all.py  eva_server.py
cpp-implem/: Dockerfile  devcontainer.json
cpp-implem/server/cpp/: main.cpp  main.h
demo/client/: Dockerfile  eva_client.py
demo/server/: eva_server.py
deploy/: Dockerfile  eva.yaml
eva-test/: eva_client.py
